--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "private": true,
   "scripts": {
     "dev:backend": "cd backend && npm start",
-    "dev:frontend": "cd frontend && npm run dev",
+    "dev:frontend": "cd frontend && npm start",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "build": "cd frontend && npm run build"
+    "start": "cd frontend && serve -s build",
+    "build": "cd frontend && npm run build",
+    "postbuild": "echo 'Build is complete!'"
+  },
+  "dependencies": {
+    "serve": "^11.3.2"
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.0"
   }
 }
