--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,9 @@
   "name": "MusicApp by Yassine",
   "version": "0.0.0",
   "private": true,
+  
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "npx nodemon app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
