--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npx nodemon app.js",
-    "dev": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "node app.js"
     
   },
   "dependencies": {
@@ -13,6 +13,6 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "node": "^3.0.3"
   }
 }
