--- a/.render.yaml
+++ b/.render.yaml
@@ -18,7 +18,7 @@
 #     envVars:
 #       - key: PATH
 #         value: "/opt/render/project/src/.venv/bin:$PATH"
-
+# #---------------------------------
 services:
   - type: web
     name: node-backend
@@ -30,12 +30,24 @@ services:
       - key: PATH
         value: "/usr/bin/ffmpeg:$PATH"
 
-  - type: web
-    name: python-scripts
-    env: python
+#   - type: web
+#     name: python-scripts
+#     env: python
+#     plan: free
+#     buildCommand: "pip install -r scripts/requirements.txt && apt-get update && apt-get install -y ffmpeg"
+#     startCommand: "cd scripts && python script.py"
+#     envVars:
+#       - key: PATH
+#         value: "/usr/bin/ffmpeg:$PATH"
+ 
+ 
+ 
+    services:
+  - type: static
+    name: frontend-service
+    env: static
     plan: free
-    buildCommand: "pip install -r scripts/requirements.txt && apt-get update && apt-get install -y ffmpeg"
-    startCommand: "cd scripts && python script.py"
-    envVars:
-      - key: PATH
-        value: "/usr/bin/ffmpeg:$PATH"
+    buildCommand: "cd frontend && npm install && npm install -g serve && npm run build"
+    startCommand: "serve -s build"
+    publishDir: "frontend/build"
+    rootDirectory: "frontend"
