--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev:backend": "cd backend && npm start",
     "dev:frontend": "cd frontend && npm start",
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-   
-    "start": "cd frontend && npx serve -s build",
+    "start": "cd frontend && serve -s build",
+  
     "build": "cd frontend && npm run build",
     "postbuild": "echo 'Build is complete!'"
   },
