--- a/.render.yaml
+++ b/.render.yaml
@@ -58,7 +58,7 @@
     name: python-scripts
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt && apt-get update && aptempt-get install -y ffmpeg"
+    buildCommand: "pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
     startCommand: "flask run --host=0.0.0.0 --port=10000"
     envVars:
       - key: PATH
