--- a/.render.yaml
+++ b/.render.yaml
@@ -41,8 +41,7 @@
 #     envVars:
 #       - key: PATH
 #         value: "/usr/bin/ffmpeg:$PATH"
- 
-services:
+ services:
   - type: web
     name: node-backend
     env: node
@@ -58,7 +57,7 @@ services:
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
-    startCommand: "flask run --host=0.0.0.0 --port=10000"
+    startCommand: "flask run --host=0.0.0.0 --port=5001"  # Changed port number
     envVars:
       - key: PATH
         value: "/usr/bin/ffmpeg:$PATH"
