--- a/.render.yaml
+++ b/.render.yaml
@@ -40,8 +40,7 @@
 #     startCommand: "cd scripts && python script.py"
 #     envVars:
 #       - key: PATH
-#         value: "/usr/bin/ffmpeg:$PATH"
- services:
+#         value: "/usr/bin/ffmpeg:$PATH"services:
   - type: web
     name: node-backend
     env: node
@@ -57,7 +56,7 @@
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
-    startCommand: "flask run --host=0.0.0.0 --port=5001"  # Changed port number
+    startCommand: "flask run --host=0.0.0.0 --port $PORT"
     envVars:
       - key: PATH
         value: "/usr/bin/ffmpeg:$PATH"
