--- a/.render.yaml
+++ b/.render.yaml
@@ -41,7 +41,6 @@
 #     envVars:
 #       - key: PATH
 #         value: "/usr/bin/ffmpeg:$PATH"services:services:
-
 services:
   - type: web
     name: node-backend
@@ -52,15 +51,13 @@ services:
     envVars:
       - key: PATH
         value: "/usr/bin/ffmpeg:$PATH"
-      - key: PORT
-        value: "5000"
         
   - type: web
     name: python-scripts
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
-    startCommand: "flask run --host=0.0.0.0 --port 5001"
+    startCommand: "flask run --host=0.0.0.0 --port $PORT"
     envVars:
       - key: PATH
         value: "/usr/bin/ffmpeg:$PATH"
@@ -68,5 +65,3 @@ services:
         value: "app.py"
       - key: FLASK_ENV
         value: "production"
-      - key: PORT
-        value: "5001"
