--- a/.render.yaml
+++ b/.render.yaml
@@ -56,7 +56,7 @@ services:
     name: python-scripts
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
+    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
     startCommand: "flask run --host=0.0.0.0 --port $PORT"
     envVars:
       - key: PATH
