--- a/.render.yaml
+++ b/.render.yaml
@@ -1,46 +1,3 @@
-# services:
-#   - type: web
-#     name: backend
-#     env: node
-#     plan: free
-#     buildCommand: "cd backend && npm install"
-#     startCommand: "node backend/app.js"
-#     envVars:
-#       - key: PATH
-#         value: "/opt/render/project/src/.venv/bin:$PATH"
-
-#   - type: web
-#     name: python-scripts
-#     env: python
-#     plan: free
-#     buildCommand: "pip install -r scripts/requirements.txt"
-#     startCommand: "cd scripts && python script.py"
-#     envVars:
-#       - key: PATH
-#         value: "/opt/render/project/src/.venv/bin:$PATH"
-# #---------------------------------
-
-
-# services:
-#   - type: web
-#     name: node-backend
-#     env: node
-#     plan: free
-#     buildCommand: " npm install && apt-get update && apt-get install -y ffmpeg"
-#     startCommand: "node app.js"
-#     envVars:
-#       - key: PATH
-#         value: "/usr/bin/ffmpeg:$PATH"
-
-#   - type: web
-#     name: python-scripts
-#     env: python
-#     plan: free
-#     buildCommand: "pip install -r scripts/requirements.txt && apt-get update && apt-get install -y ffmpeg"
-#     startCommand: "cd scripts && python script.py"
-#     envVars:
-#       - key: PATH
-#         value: "/usr/bin/ffmpeg:$PATH"services:services:services:
 services:
   - type: web
     name: node-backend
@@ -56,7 +13,7 @@ services:
     name: python-scripts
     env: python
     plan: free
-    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
+    buildCommand: "pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
     startCommand: "flask run --host=0.0.0.0 --port $PORT"
     envVars:
       - key: PATH
