--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.3.1"
   },
   "devDependencies": {
     "node": "^18.16.1"
