--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.3.1"
+    "express-rate-limit": "^7.3.1",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "node": "^18.16.1"
